<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".score.ScoreFragment">

    <data>

        <variable
            name="scoreViewModel"
            type="de.hsbhv.myquiz.score.ScoreViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorBackground">


        <TextView
            android:id="@+id/win_sum_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/win_sum"
            android:textColor="@color/black_text_color"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/cash_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/cash_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:text="@{@string/cash_format(scoreViewModel.cash)}"
            android:textColor="@color/black_text_color"
            android:textSize="34sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/start_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/win_sum_text"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/cash_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/cash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/save_result_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/enter_score"
            android:visibility="@{scoreViewModel.saveResultButtonVisible}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cash_text" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/save_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="nickname_edit,choose_avatar_text,avatar_scrollview" />

        <EditText
            android:id="@+id/nickname_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_input"
            app:layout_constraintEnd_toEndOf="@+id/save_result_button"
            app:layout_constraintHorizontal_bias="0.542"
            app:layout_constraintStart_toStartOf="@+id/save_result_button"
            app:layout_constraintTop_toBottomOf="@+id/save_result_button" />

        <TextView
            android:id="@+id/choose_avatar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Klicke auf ein Avatar um zu speichern."
            app:layout_constraintEnd_toEndOf="@+id/nickname_edit"
            app:layout_constraintStart_toStartOf="@+id/nickname_edit"
            app:layout_constraintTop_toBottomOf="@+id/nickname_edit" />

        <HorizontalScrollView
            android:id="@+id/avatar_scrollview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="8dp"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_avatar_text">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avatar_image_1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_1" />

                <ImageView
                    android:id="@+id/avatar_image_2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_2" />

                <ImageView
                    android:id="@+id/avatar_image_3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_3" />

                <ImageView
                    android:id="@+id/avatar_image_4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_4" />

                <ImageView
                    android:id="@+id/avatar_image_5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_5" />

                <ImageView
                    android:id="@+id/avatar_image_6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_6" />

                <ImageView
                    android:id="@+id/avatar_image_7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_7" />

                <ImageView
                    android:id="@+id/avatar_image_8"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_8" />

                <ImageView
                    android:id="@+id/avatar_image_9"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_9" />

                <ImageView
                    android:id="@+id/avatar_image_10"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_10" />

                <ImageView
                    android:id="@+id/avatar_image_11"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_11" />

                <ImageView
                    android:id="@+id/avatar_image_12"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_12" />

                <ImageView
                    android:id="@+id/avatar_image_13"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_13" />

                <ImageView
                    android:id="@+id/avatar_image_14"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/avatar_14" />

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/restart"
            android:theme="@style/PrimaryButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/back_to_menu"
            android:theme="@style/SecondaryButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>